Bug 158247 - "Check what the Server supports" in POP-/SMTP-Account Setting broken, when Server unreachable
Summary: "Check what the Server supports" in POP-/SMTP-Account Setting broken, when Se...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-22 23:58 UTC by Majin Sniper
Modified: 2008-02-23 21:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Before the Check (45.50 KB, image/png)
2008-02-22 23:59 UTC, Majin Sniper
Details
Error Message (11.77 KB, image/png)
2008-02-23 00:00 UTC, Majin Sniper
Details
After Checking (45.13 KB, image/png)
2008-02-23 00:00 UTC, Majin Sniper
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Majin Sniper 2008-02-22 23:58:03 UTC
Version:           1.9.50 (from Trunk) (using Devel)
Installed from:    Compiled sources
Compiler:          gcc 4.1.2 
OS:                Linux

In the Add Account Dialog for POP Accounts the "Check what the Server supports" has the following problem:
If the Server cannot be found (e.g. no Internet Connnection, server address misspelled, etc...) all Radio Buttons to set the encryption type are disabled (see attached images). It's impossible to set anything manually. When the Window is closed an then the account is edited all options are available again.

On the screenshot I lost my wireless connection so the mailserver couldn't be detected.
Comment 1 Majin Sniper 2008-02-22 23:59:47 UTC
Created attachment 23675 [details]
Before the Check
Comment 2 Majin Sniper 2008-02-23 00:00:12 UTC
Created attachment 23676 [details]
Error Message
Comment 3 Majin Sniper 2008-02-23 00:00:32 UTC
Created attachment 23677 [details]
After Checking
Comment 4 Majin Sniper 2008-02-23 00:02:23 UTC
I forgot to mention, that the Add Transport Account acts similarly. In this case, there won't be any error message, the Radio Buttons are simply disabled.
Comment 5 Thomas McGuire 2008-02-23 21:32:24 UTC
SVN commit 778523 by tmcguire:

Don't disable the controls for SMTP when the servertest
couldn't reach the server.

CCBUG: 158247


 M  +14 -2     transportconfigdialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=778523
Comment 6 Thomas McGuire 2008-02-23 21:33:50 UTC
SVN commit 778524 by tmcguire:

Don't disable the controls for POP3 or IMAP authentication when the servertest
failed because the server couldn't be reached.

BUG:158247


 M  +20 -2     accountdialog.cpp  
 M  +1 -0      accountdialog.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=778524