Don't disable the controls for POP3 or IMAP authentication when the servertest failed because the server couldn't be reached.

BUG:158247

svn path=/trunk/KDE/kdepim/; revision=778524